# cloudwatch-loki-log-tailscale-function

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bootstrap  build.sh  pyproject.toml
.github/workflows/: staging.yaml
examples/: tailscale.ingress.yaml
infra/: .terraform.lock.hcl  backend.tf  iam.tf  lambda.tf  locals.tf  main.tf  security_group.tf  variables.tf
infra/modules/bucket/: variables.tf
infra/modules/cloudwatch/: main.tf  variables.tf
infra/modules/vpc/: main.tf
scripts/: remove_devices.py
src/: main.py
src/models/: cloudwatch.py  common.py  config.py
terraform/: cloudwatch-loki-shipper.tf  cloudwatch.tf  ecr.tf  lambda.tf  main.tf  providers.tf  variables.tf
terraform/modules/bucket/: main.tf  output.tf
terraform/modules/cloudwatch/: variables.tf
terraform/modules/vpc/: main.tf  variables.tf
test/factories/: log_event.py
test/unit/: test_main.py
