[tool.poetry]
name = "cloudwatch-loki-log-tailscale-function"
version = "0.2.0"
description = "ship cloudwatch logs with loki and tailscale"
authors = ["Sacha <sacha.smart@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
factory-boy = "3.3.3"
python = "^3.12"
certifi = "2019.11.28"
chardet = "3.0.4"
idna = "2.8"
structlog = "25.4.0"
httpx = {extras = ["socks"], version = "^0.28.1"}
pydantic-settings = "2.9.1"
pydantic = "2.11.7"
awslambdaric = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
